added form and styles

--- a/src/app/account/account.component.html
+++ b/src/app/account/account.component.html
@@ -1,1 +1,8 @@
-<a routerLink="/">email, wyloguj</a>
+
+<div>
+  <p>logged user: </p>
+  <p>{{ loggedUser.email }}</p>
+  <button type='button'>
+    <a routerLink="/">wyloguj</a>
+  </button>
+<div>
