--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,1 +1,11 @@
-<a routerLink="/konto">login form</a>
+<div class='center'>
+  <form class='form-style'>
+    <label>email: </label>
+    <input id='email' type='string' placeholder='e-mail'>
+    <label>password: </label>
+    <input id='password' type='password' placeholder='password'>
+    <button type='button'>
+      <a routerLink="/konto">login</a>
+    </button>
+  </form>
+</div>
