--- a/src/app/account/account.component.html
+++ b/src/app/account/account.component.html
@@ -1,8 +1,14 @@
 
-<div>
-  <p>logged user: </p>
-  <p>{{ loggedUser.email }}</p>
-  <button type='button'>
-    <a routerLink="/">wyloguj</a>
-  </button>
+<div class='center'>
+  <div class='data-info'>
+    <span>logged user: </span>
+    <span>{{ loggedUser.email }}</span>
+
+      <a routerLink="/">
+        <button type='button'>
+          wyloguj
+        </button>
+      </a>
+
+  </div>
 <div>
