--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -4,8 +4,12 @@
     <input id='email' type='string' placeholder='e-mail'>
     <label>password: </label>
     <input id='password' type='password' placeholder='password'>
-    <button type='button'>
-      <a routerLink="/konto">login</a>
-    </button>
+
+      <a routerLink="/konto">
+        <button type='button'>
+          login
+        </button>
+      </a>
+
   </form>
 </div>
