--- a/src/styles.sass
+++ b/src/styles.sass
@@ -2,3 +2,38 @@
 body
   margin: 0px
   padding: 0px
+  font-size: 17px
+
+.center
+  position: relative
+  background-color: #659dbd
+  height: 100vh
+  display: flex
+  justify-content: center
+  align-items: center
+
+.data-info
+  display: flex
+  flex-flow: column
+  & > span
+    margin-bottom: 10px
+
+a
+  text-decoration: none
+
+button
+  background-color: #f64c72
+  color: white
+  border: none
+  text-align: center
+  width: 100%
+  cursor: pointer
+  font-size: 17px
+  padding: 10px
+
+.form-style
+  display: flex
+  flex-flow: column
+  & > input
+    margin-bottom: 10px
+    padding: 7px
