--- a/src/app/account/account.component.html
+++ b/src/app/account/account.component.html
@@ -4,11 +4,9 @@
     <span>logged user: </span>
     <span>{{ loggedUser }}</span>
 
-      <a routerLink="/">
-        <button type='button'>
-          wyloguj
-        </button>
-      </a>
+    <button type='button' (click)='logOut()'>
+      wyloguj
+    </button>
 
   </div>
   <div class='data-info' *ngIf="!isLogged">
