--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,4 +1,4 @@
-<div class='center'>
+<div class='center form-style'>
   <form class='form-style' (ngSubmit)='onSubmit()'>
     <label>email: </label>
     <input id='email' name='email' type='text' placeholder='e-mail' [(ngModel)]="email">
@@ -9,4 +9,5 @@
       login
     </button>
   </form>
+  <span class='color-red'>{{ failedLoginMessage }}</span>
 </div>
