--- a/src/styles.sass
+++ b/src/styles.sass
@@ -31,6 +31,22 @@ button
   font-size: 17px
   padding: 10px
 
+.small-button
+  background-color: #9999ff
+  color: white
+  border: none
+  text-align: center
+  width: 100%
+  cursor: pointer
+  padding: 5px
+  margin: 1px
+  font-size: 14px
+
+.flex
+  display: flex
+  justify-content: space-between
+  flex-flow: row
+
 .form-style
   display: flex
   flex-flow: column
