--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,37 +1,51 @@
 <div class='center'>
-  <div>
+  <div style='min-width: 300px'>
 
     <div class='flex'>
       <button type='button' class='small-button' (click)='setLogin(true)'>login</button>
       <button type='button' class='small-button' (click)='setLogin(false)'>register</button>
     </div>
 
-    <div class='form-style' *ngIf='loginActive'>
-      <form class='form-style' (ngSubmit)='onSubmit()'>
-        <label>email: </label>
-        <input id='email' name='email' type='text' placeholder='e-mail' [(ngModel)]="email">
-        <label>password: </label>
-        <input id='password' name='password' type='password' placeholder='password' minlength='8' [(ngModel)]='password'>
+    <div *ngIf='loginActive'>
+      <div class='form-style'>
+        <form class='form-style' (ngSubmit)='onSubmit()'>
+          <label>email: </label>
+          <input id='email' name='email' type='text' placeholder='e-mail' [(ngModel)]="email">
+          <label>password: </label>
+          <input id='password' name='password' type='password' placeholder='password' minlength='8' [(ngModel)]='password'>
 
-        <button type='submit'>
-          login
-        </button>
-      </form>
-      <span class='color-red'>{{ failedLoginMessage }}</span>
+          <button type='submit'>
+            login
+          </button>
+        </form>
+      </div>
+      <div style='text-align: center'>
+        <p class='color-red'>{{ failedLoginMessage }}</p>
+      </div>
     </div>
 
 
-    <div class='form-style' *ngIf='!loginActive'>
-      <form class='form-style' (ngSubmit)='onSubmitRegister()'>
-        <label>email: </label>
-        <input id='email' name='email' type='text' placeholder='e-mail' [(ngModel)]="email">
-        <label>password: </label>
-        <input id='password' name='password' type='password' placeholder='password' minlength='8' [(ngModel)]='password'>
+    <div *ngIf='!loginActive'>
+      <div>
+        <form class='form-style' (ngSubmit)='onSubmitRegister()'>
+          <label>email: </label>
+          <input id='email' name='email' type='text' placeholder='e-mail' [(ngModel)]="email">
+          <label>password: </label>
+          <input id='password' name='password' type='password' placeholder='password' minlength='8' [(ngModel)]='password'>
 
-        <button type='submit'>
-          register
-        </button>
-      </form>
+          <button type='submit'>
+            register
+          </button>
+        </form>
+      </div>
+      <div style='text-align: center'>
+        <p class='color-red'>{{ failedRegisterMessage }}</p>
+        <p class='color-red'>{{ passNumberCheck }}</p>
+        <p class='color-red'>{{ passUpperCaseCheck }}</p>
+        <p class='color-red'>{{ passLowerCaseCheck }}</p>
+        <p class='color-red'>{{ passLengthCheck }}</p>
+
+      </div>
     </div>
 
 
